# untitled

./: LICENSE  pyproject.toml  requirements.txt  scratch.ipynb  xor.ipynb
decoder.zarr/: zarr.json
mnist/: mnist.ipynb  mnist_data.hdf5  scratch.py
mnist/xor/: xor.ipynb  xor_weights_2904702871_.hdf5
src/nonlinear_approximator/: __init__.py  activations.py  basis_functions.py  inference.py  model.py  monte_carlo_relu.py  params.py  scatch.ipynb  test_basis.py  training.py
src/nonlinear_approximator/test/: test_training.py
xor/: xor_proof_of_concept.ipynb
