[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nonlinear_approximator"
authors = [
    {name = "Chris Fritz", email = "fritz17236@htomail.com"},
]
description = "Untitled"
requires-python = ">=3.11"
version = "0.0.1"

dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "torch",
    "torchvision",
    "pydantic",
    "tqdm",
    "cvxpy",
    "h5py",
    "ipykernel",
    "dask[complete]",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "autoflake",
    "pytest",
]